# phastaChef

./: CMakeLists.txt  Doxyfile.in  README.md  calcEfficiency.cc  chefPhasta.h  chef_phasta.c  chef_phasta.cc  chef_phasta_adaptLoop.cc  chef_phasta_adaptLoop_files.cc  chef_phasta_adaptLoop_files_ramdisk.cc  chef_phasta_adaptLoop_posix.cc  chef_phasta_adaptLoop_ramdisk.cc  chef_phasta_chef_stream.cc  chef_phasta_loop_aro.cc  chef_phasta_loop_stream.cc  chef_phasta_loop_stream_ur.cc  chef_phasta_loop_sttr.cc  chef_phasta_posix.cc  chef_phasta_sam_adaptLoop.cc  chef_phasta_sam_adaptLoop_ramdisk.cc  chef_phasta_sam_adaptLoop_sz.cc  chef_phasta_sam_adaptLoop_sz_posix.cc  chef_phasta_sam_adaptLoop_sz_ramdisk.cc  chef_phasta_stream.cc  customSF.cc  customSF.h  loopChefPhasta.cc  meshGrading.cc  pcAdapter.cc  pcAdapter.h  pcError.cc  pcError.h  pcShock.cc  pcShock.h  pcSmooth.cc  pcSmooth.h  pcTimeDepMesh.cc  pcUpdateMesh.cc  pcUpdateMesh.h  pcWriteFiles.cc  (+4 more)
cdash/: CTestConfig.cmake  Project.xml  nightly.cmake  nightly.sh
phstream/: CMakeLists.txt  phstream.cc  phstream.h
test/: runphasta.cmake  testing.cmake
